# JARVIX-MULTISTACK

./: .copilot-instructions.md  .env.example  .gitignore  AGENTS.md  Dockerfile  EXPECTED_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  MVP_COMPLETADO.md  PHASE2_COMPLETE.md  PHASE3_SUMMARY.md  PHASE6_SCALABILITY.md  README.md  REGLAS_IMPLEMENTADAS.md  STRUCTURE.md  V2_ROADMAP.md  WORKSPACE.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
app/: batch_pdf.ts  package-lock.json  package.json  pdf.ts  report.ts  trend_report.ts
data/: allowed_domains.txt  api_config.toml  discovered_seeds_ecommerce_ES.txt  paywall_keywords.txt  schema.sql  seeds.txt
data/actions/: 20260117_210232.jsonl  20260117_210232_summary.json  final_mvp_2026.jsonl  final_mvp_2026_summary.json
data/clean/: 20260117_173910.jsonl  RUN_ID.jsonl  final_mvp_2026.jsonl  mvp_test_001.jsonl
data/invalid/: 20260117_173910.jsonl  RUN_ID.jsonl  final_mvp_2026.jsonl  mvp_test_001.jsonl
data/raw/: test_001.parquet
data/reports/: 20260117_173910.html  RUN_ID.html  mvp_test_001.html  (+1 more)
docs/: 01-OVERVIEW.md  02-PHASES.md  04-CAPABILITIES.md  05-SCALABILITY.md  06-TESTING.md  DEPLOYMENT.md  DISCOVERY.md  EXPECTED_RESULTS.md  PHASE3_TRENDS.md  PHASE6_COMPLETE.md  PROYECTOS.md  README.md  SISTEMA.md  VALIDATION.md
engine/: Cargo.toml  INTEGRATION.md  README.md
engine/examples/: basic_enrichment.rs  batch_enrichment.rs  benchmark.rs
engine/src/: db.rs  discovery.rs  enrichment.rs  lib.rs  main.rs  parallel.rs  policy.rs  storage.rs
science/: Project.toml  actions.jl  email_alerts.jl  generate_test_data.jl  parallel_score.jl  score.jl  test_trends.jl  trends.jl  weekly_trends.jl
scripts/: activate.ps1  auto_integrate.ps1  benchmark.sh  build.ps1  create_dockerhub_token_playwright.js  create_dockerhub_token_playwright.ps1  demo_discovery.sh  demo_phase3.sh  export_docker_to_github_secrets.sh  migrate_sqlite_to_postgres.sh  monitor_prs.ps1  run_mvp.ps1  run_mvp_with_enrichment.ps1  set_dockerhub_secrets_from_helper.ps1  set_dockerhub_token_from_clipboard.ps1  set_dockerhub_token_from_clipboard.sh  setup.ps1  setup_cron.sh  validate_phase3.sh  verify.ps1
(+16 files in other folders)
