[package]
name = "jarvix"
version = "1.0.0"
edition = "2021"
rust-version = "1.92"

[[bin]]
name = "jarvix"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.23"
url = "2.5"
robotstxt = "0.3"
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.13"
