[package]
name = "jarvix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jarvix-enrichment"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }
async-trait = "0.1"
url = "2.5"
regex = "1.10"
sha2 = "0.10"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
mockito = "1.2"
