[package]
name = "jarvix"
version = "2.0.0"
edition = "2021"
rust-version = "1.92"

[[bin]]
name = "jarvix"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.33", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
parquet = "53"
arrow = "53"
regex = "1.11"
rayon = "1.10"
url = "2.5"
toml = "0.8"
async-trait = "0.1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
